[package]
name = "whatsinaname"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-display = { version = "0.6.0", optional = true }

[features]
default = ["file-type"]
image = []
executable = []
proprietary = []
file-type = ["dep:parse-display", "image", "executable", "proprietary"]
